--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+/Users/gabi/codes/ml_ops/02_experiment_tracking/mlflow-examples/mlruns filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
