--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-/Users/gabi/codes/ml_ops/02_experiment_tracking/mlflow-examples/mlruns filter=lfs diff=lfs merge=lfs -text
+# Track pickled models and any other heavy binaries with LFS
 *.pkl filter=lfs diff=lfs merge=lfs -text
+*.h5  filter=lfs diff=lfs merge=lfs -text
