--- a/03_ml_pipelines/mlops/docker-compose.yml
+++ b/03_ml_pipelines/mlops/docker-compose.yml
@@ -1,43 +1,49 @@
+version: '3'
+
 services:
   magic-platform:
-    env_file:
-      - .env.dev
     build:
       context: .
-    command: /app/run_app.sh mage start $PROJECT_NAME
-    ports:
-      - 6789:6789
+      dockerfile: Dockerfile
+      args:
+        PROJECT_NAME: mlops
+        MAGE_CODE_PATH: /home/src
+    environment:
+      - MAGE_CODE_PATH=/home/src
+      - PROJECT_NAME=mlops
+      - PYTHONPATH=/home/src/mlops
     volumes:
-      # Mount your local codebase to the container.
-      - .:/$MAGE_CODE_PATH
-      # Store the data output on local machine to easily debug (optional).
-      - ~/.mage_data:/$MAGE_CODE_PATH/mage_data
-      # Initial credentials to create an IAM user with limited permissions for deployment.
-      - ~/.aws:/root/.aws
-      # Local machine’s SSH keys to pull and push to your GitHub repository.
-      - ~/.ssh:/root/.ssh:ro
-      # Local machine’s GitHub configs
-      - ~/.gitconfig:/root/.gitconfig:ro
-    restart: on-failure:5
+      - .:/home/src
+    ports:
+      - "6789:6789"
     networks:
       - app-network
     depends_on:
       - magic-database
-    stdin_open: true # used for interactive debugging
-    tty: true # used for interactive debugging
+
   magic-database:
-    image: pgvector/pgvector:0.6.0-pg16
-    env_file:
-      - .env.dev
-    ports:
-      - 5432:5432
-    volumes:
-      - ~/.postgres/data:/var/lib/postgresql/data
-      # Custom database initialization scripts (optional).
-      - ./scripts/database:/docker-entrypoint-initdb.d
+    image: postgres:14
     restart: always
+    environment:
+      POSTGRES_DB: mage
+      POSTGRES_USER: magic
+      POSTGRES_PASSWORD: magic
+    ports:
+      - "5432:5432"
     networks:
       - app-network
+
+  mlflow:
+    build:
+      context: .
+      dockerfile: mlflow.dockerfile
+    ports:
+      - "5001:5001"
+    volumes:
+      - ./mlflow_data:/home/mlflow_data
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
