--- a/03_ml_pipelines/mlops/mlops/homework_03/pipelines/homework_pipeline/metadata.yaml
+++ b/03_ml_pipelines/mlops/mlops/homework_03/pipelines/homework_pipeline/metadata.yaml
@@ -41,7 +41,8 @@ blocks:
   configuration:
     file_source:
       path: homework_03/transformers/train_model.py
-  downstream_blocks: []
+  downstream_blocks:
+  - export_model
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -54,6 +55,24 @@ blocks:
   upstream_blocks:
   - prepare_data
   uuid: train_model
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/data_exporters/export_model.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: export_model
+  retry_config: null
+  status: updated
+  timeout: null
+  type: data_exporter
+  upstream_blocks:
+  - train_model
+  uuid: export_model
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
